--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "export-gh": "next build && env ASSET_PREFIX=/vdw-inst next export -o docs && touch docs/.nojekyll",
     "export": "npm run export-dist && npm run export-gh",
     "exportStaging": "next build && next export -o dist && gulp gzipDist && aws s3 sync ./dist s3://vdw-tool.thisotherthing.co --delete --acl public-read --content-encoding gzip --cache-control max-age=2592000",
-    "start": "next",
-    "live": "live-server dist"
+    "start": "npm run browser & next",
+    "live": "live-server dist",
+    "browser": "sleep 3; open http://localhost:3000"
   },
   "dependencies": {
     "array-shuffle": "^1.0.1",
